# VibeVoice-Local-RTX3060

./: .gitignore  README.md  main.py  pyproject.toml
src/: app.py  config.py  locales.py  model.py  utils.py
